--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">appEPSA</string>
+    <string name="app_name">APPEPSA</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="cadastre">CADASTRE-SE</string>
@@ -9,5 +9,13 @@
     <string name="esqueci">ESQUECI MINHA SENHA</string>
     <string name="senha">SENHA:</string>
     <string name="email">EMAIL</string>
+    <string name="eTappepsa">SEJA BEM VINDO</string>
+    <string name="eTemail">EMAIL</string>
+    <string name="eTsenha">SENHA</string>
+    <string name="eTesquecisenha">ESQUECI MINHA SENHA</string>
+    <string name="bTentrar">ENTRAR</string>
+    <string name="bTcadastre">CADASTRE-SE</string>
+    <string name="eTbemvindo">SEJA BEM VINDO</string>
+    <string name="bemvindo">SEJA BEM VINDO</string>
 
 </resources>
