--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">APPEPSA</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
@@ -16,5 +17,7 @@
     <string name="bTcadastre">CADASTRE-SE</string>
     <string name="eTbemvindo">SEJA BEM VINDO</string>
     <string name="bemvindo">SEJA BEM VINDO</string>
+    <string name="title_activity_cadastro">CadastroActivity</string>
+    <string name="title_activity_menu">MenuActivity</string>
 
 </resources>
