Função botão esqueci senha na tela de login

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="bemvindo">SEJA BEM VINDO</string>
     <string name="title_activity_cadastro">Cadastro de Usuário</string>
     <string name="title_activity_menu">Menu Principal</string>
+    <string name="title_activity_recuperar_senha_main">Recuperar Senha</string>
 
 </resources>
