--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,5 +20,13 @@
     <string name="title_activity_cadastro">Cadastro de Usuário</string>
     <string name="title_activity_menu">Menu Principal</string>
     <string name="title_activity_recuperar_senha_main">Recuperar Senha</string>
+    <string name="nome">NOME COMPLETO</string>
+    <string name="cpf">CPF</string>
+    <string name="datanascimento">DATA DE NASCIMENTO</string>
+    <string name="celular">CELULAR</string>
+    <string name="confirmesenha">CONFIRME SUA SENHA</string>
+    <string name="voltar">VOLTAR</string>
+    <string name="limpar">LIMPAR</string>
+    <string name="cadastrar">CADASTRAR</string>
 
 </resources>
