Finalização (Edit Text e Text View) da tela cadastro

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="voltar">VOLTAR</string>
     <string name="limpar">LIMPAR</string>
     <string name="cadastrar">CADASTRAR</string>
+    <string name="salvar">SALVAR</string>
 
 </resources>
